# LibreSplat

./: README.md  pyproject.toml
childapps/: PickleView.py
examples/ExampleLibreSplatServer/: app.py
examples/ExampleLibreSplatServer/uploaded_files/7667717507/: log.txt  snapshot.pickle
snapshotViewer/: app.py
src/LibreSplat/: LibreSplat.py  __init__.py
src/LibreSplat_Sigge_REDACTED/: LibreSplat.py  __init__.py
