[project]
name = "LibreSplat"
version = "0.1.2.1"
authors = [
  { name="Sigge[REDACTED]", email="REDACTED@redact.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/usernames122/LibreSplat"
Issues = "https://github.com/usernames122/LibreSplat/issues"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"